--- a/_columns/Stock_Of_the_Day/zh-cn/2024-10-16.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-10-16.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Amazon Goes Nuclear, Sending IBD's Stock Of The Day Skyward	亚马逊走向核能市场，IBD 的今日股票飙升
+  Amazon Goes Nuclear, Sending IBD's Stock Of The Day Skyward
 image: /assets/img/stock-of-the-day/2024-10-16.jpg
 date: 2024-10-16 16:13 -0700
 author: KIT NORTON
@@ -12,46 +12,37 @@ author: KIT NORTON
 
 
 
-**Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) announced Wednesday that it's joining the nuclear renaissance, sending nuclear-related stocks higher, including **Cameco** ([CCJ](https://research.investors.com/quote.aspx?symbol=CCJ)), Wednesday's [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/).  
-**Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 周三宣布，它将加入核能复兴，推动核相关股票走高，包括周三的 [IBD 今日股票](https://www.investors.com/category/research/ibd-stock-of-the-day/) **Cameco** （[CCJ](https://research.investors.com/quote.aspx?symbol=CCJ)）。
+**Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) announced Wednesday that it's joining the nuclear renaissance, sending nuclear-related stocks higher, including **Cameco** ([CCJ](https://research.investors.com/quote.aspx?symbol=CCJ)), Wednesday's [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/).
 
 
-The uranium refiner broke out past a buy point after Amazon said it has signed agreements to develop the emerging small modular reactor technology — joining a growing list of tech giants that are investing in nuclear power to run data centers.  
-在亚马逊表示已签署开发新兴小型模块化反应堆技术的协议后，这家铀精炼厂突破了买入点，加入了越来越多的投资核电以运行数据中心的科技巨头的行列。
+The uranium refiner broke out past a buy point after Amazon said it has signed agreements to develop the emerging small modular reactor technology — joining a growing list of tech giants that are investing in nuclear power to run data centers.
 
 
-[S&P 500 leader](https://www.investors.com/news/sp500-vistra-stock-constellation-energy-stock-lag-market/) **Vistra** ([VST](https://research.investors.com/quote.aspx?symbol=VST)) and small-modular reactor play **Oklo** ([OKLO](https://research.investors.com/quote.aspx?symbol=OKLO)) were among the other nuclear-powered stocks.  
-[标准普尔 500 指数领导者](https://www.investors.com/news/sp500-vistra-stock-constellation-energy-stock-lag-market/)**Vistra** （[VST](https://research.investors.com/quote.aspx?symbol=VST)） 和小型模块化反应堆公司 **Oklo** （[OKLO）](https://research.investors.com/quote.aspx?symbol=OKLO) 是其他核动力股票之一。
+[S&P 500 leader](https://www.investors.com/news/sp500-vistra-stock-constellation-energy-stock-lag-market/) **Vistra** ([VST](https://research.investors.com/quote.aspx?symbol=VST)) and small-modular reactor play **Oklo** ([OKLO](https://research.investors.com/quote.aspx?symbol=OKLO)) were among the other nuclear-powered stocks.
 
 
-Top hyperscalers — the largest cloud, data center and AI operators — include Amazon.com, **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)), **Meta** ([META](https://research.investors.com/quote.aspx?symbol=META)) and **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)). Amazon's decision to invest in small modular reactors, or SMRs, comes just a day after a similar announcement by Google. SMRs do not currently exist but there are a number of companies working to develop the technology.  
-顶级超大规模企业（最大的云、数据中心和 AI 运营商）包括 Amazon.com、**Microsoft** （[MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)）、**Meta** （[META）](https://research.investors.com/quote.aspx?symbol=META) 和 **Alphabet** （[GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)）。亚马逊决定投资小型模块化反应堆 （SMR），就在谷歌发布类似公告的前一天。目前尚不存在 SMR，但有许多公司正在努力开发这项技术。
+Top hyperscalers — the largest cloud, data center and AI operators — include Amazon.com, **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)), **Meta** ([META](https://research.investors.com/quote.aspx?symbol=META)) and **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)). Amazon's decision to invest in small modular reactors, or SMRs, comes just a day after a similar announcement by Google. SMRs do not currently exist but there are a number of companies working to develop the technology.
 
 
 
 
-In late September, **Constellation Energy** ([CEG](https://research.investors.com/quote.aspx?symbol=CEG)) announced a [two-decade contract with **Microsoft**](https://www.investors.com/news/sp-500-nuclear-inks-microsoft-deal-three-mile-island-restart/) to provide nuclear power for the tech giant's data centers. The deal involves reopening Pennsylvania's Three Mile Island Unit 1, which had been idle since 2019. Three Mile Island's Unit 2 reactor has been shut down since the 1979, after the partial meltdown at the nuclear power plant.  
-9 月下旬，**Constellation Energy** （[CEG](https://research.investors.com/quote.aspx?symbol=CEG)） 宣布[与 **Microsoft** 签订一份为期二十年的合同](https://www.investors.com/news/sp-500-nuclear-inks-microsoft-deal-three-mile-island-restart/)，为这家科技巨头的数据中心提供核能。该交易涉及重新开放宾夕法尼亚州的三里岛 1 号机组，该机组自 2019 年以来一直处于闲置状态。三哩岛的 2 号机组反应堆自 1979 年核电站部分熔毁后一直关闭。
+In late September, **Constellation Energy** ([CEG](https://research.investors.com/quote.aspx?symbol=CEG)) announced a [two-decade contract with **Microsoft**](https://www.investors.com/news/sp-500-nuclear-inks-microsoft-deal-three-mile-island-restart/) to provide nuclear power for the tech giant's data centers. The deal involves reopening Pennsylvania's Three Mile Island Unit 1, which had been idle since 2019. Three Mile Island's Unit 2 reactor has been shut down since the 1979, after the partial meltdown at the nuclear power plant.
 
 
-Morgan Stanley analyst David Arcaro wrote that the Constellation-Microsoft deal "[proves out the value of nuclear power for hyperscalers](https://www.investors.com/news/sp500-constellation-energy-price-target-hikes-microsoft-nuclear-power-deal/), with higher prices for future deals."  
-摩根士丹利分析师大卫·阿卡罗 （David Arcaro） 写道，Constellation 与 Microsoft 的交易“[证明了核电对超大规模企业的价值](https://www.investors.com/news/sp500-constellation-energy-price-target-hikes-microsoft-nuclear-power-deal/)，未来交易的价格会更高”。
+Morgan Stanley analyst David Arcaro wrote that the Constellation-Microsoft deal "[proves out the value of nuclear power for hyperscalers](https://www.investors.com/news/sp500-constellation-energy-price-target-hikes-microsoft-nuclear-power-deal/), with higher prices for future deals."
 
 
-This is good news for Canada-based Cameco, which is one of the world's largest providers of uranium with utilities around the globe relying on the company to provide nuclear fuel solutions.  
-这对总部位于加拿大的 Cameco 来说是个好消息，该公司是世界上最大的铀供应商之一，全球公用事业公司都依赖该公司提供核燃料解决方案。
+This is good news for Canada-based Cameco, which is one of the world's largest providers of uranium with utilities around the globe relying on the company to provide nuclear fuel solutions.
 
 
-AI And Nuclear 人工智能和核能
-----------------------
+AI And Nuclear
+--------------
 
 
-So far in 2024, nuclear power and utility stocks have been riding the artificial intelligence energy wave.  
-2024 年到目前为止，核电和公用事业股一直在乘着人工智能能源的浪潮。
+So far in 2024, nuclear power and utility stocks have been riding the artificial intelligence energy wave.
 
 
-Artificial intelligence — and the data centers needed to train the systems — are expected to boost energy demand throughout this decade. In the U.S., McKinsey & Co. projects that data center energy demand will grow from around 4% currently to 11%-12% by 2030.  
-人工智能以及训练系统所需的数据中心预计将在这十年内增加能源需求。在美国，麦肯锡公司预计数据中心能源需求将从目前的4%左右增长到2030年的11%-12%。
+Artificial intelligence — and the data centers needed to train the systems — are expected to boost energy demand throughout this decade. In the U.S., McKinsey & Co. projects that data center energy demand will grow from around 4% currently to 11%-12% by 2030.
 
 
 
@@ -59,7 +50,7 @@ Artificial intelligence — and the data centers needed to train the systems —
 ---
 
 
-#### [Bitcoin Miners Forge Lucrative AI Deals. They Have A Big Advantage.比特币矿工伪造利润丰厚的 AI 交易。他们有很大的优势。](https://www.investors.com/news/bitcoin-miners-stocks-ai-data-centers/)
+#### [Bitcoin Miners Forge Lucrative AI Deals. They Have A Big Advantage.](https://www.investors.com/news/bitcoin-miners-stocks-ai-data-centers/)
 
 
 
@@ -67,76 +58,60 @@ Artificial intelligence — and the data centers needed to train the systems —
 ---
 
 
-Many technology companies are investing in or partnering with nuclear power providers to ensure energy supplies for their data centers.  
-许多技术公司正在投资核电提供商或与核电提供商合作，以确保其数据中心的能源供应。
+Many technology companies are investing in or partnering with nuclear power providers to ensure energy supplies for their data centers.
 
 
-Morgan Stanley analysts have proclaimed in recent months that a "nuclear renaissance" is underway.  
-摩根士丹利（Morgan Stanley）的分析师在最近几个月宣称，一场“核能复兴”正在进行中。
+Morgan Stanley analysts have proclaimed in recent months that a "nuclear renaissance" is underway.
 
 
-They wrote that nuclear power, while still a divisive issue, is making a comeback. The firm sees $1.5 trillion in investment in new capacity through 2050.  
-他们写道，核电虽然仍然是一个存在分歧的问题，但正在卷土重来。该公司预计到 2050 年，新产能投资将达到 1.5 万亿美元。
+They wrote that nuclear power, while still a divisive issue, is making a comeback. The firm sees $1.5 trillion in investment in new capacity through 2050.
 
 
-Cameco Stock Performance Cameco 股票表现
-------------------------------------
+Cameco Stock Performance
+------------------------
 
 
-CCJ stock jumped 7.8% to 55.77 during [market trade](https://www.investors.com/category/market-trend/stock-market-today/) on Wednesday, gapping above a 52.32 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/). The buy zone runs to 54.94.  
-CCJ 股票在周三[的市场交易](https://www.investors.com/category/market-trend/stock-market-today/)中上涨 7.8% 至 55.77，跳空高于 52.32 [的买入点](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/)。买入区达到 54.94。
+CCJ stock jumped 7.8% to 55.77 during [market trade](https://www.investors.com/category/market-trend/stock-market-today/) on Wednesday, gapping above a 52.32 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/). The buy zone runs to 54.94.
 
 
-Cameco stock has gained around 30% in 2024. The stock dropped more than 10% in August but has rebounded powerfully since early September.  
-Cameco 股票在 2024 年上涨了约 30%。该股在 8 月份下跌了 10% 以上，但自 9 月初以来已经强劲反弹。
+Cameco stock has gained around 30% in 2024. The stock dropped more than 10% in August but has rebounded powerfully since early September.
 
 
 
-Along with Cameco on Wednesday, [S&P 500 leader](https://www.investors.com/news/sp500-vistra-stock-constellation-energy-stock-lag-market/) Vistra, a nuclear power utilities play, jumped 5.7%. Fellow S&P 500 component Constellation Energy advanced 5.1%.  
-周三，与 Cameco 一起，[标准普尔 500 指数领导者](https://www.investors.com/news/sp500-vistra-stock-constellation-energy-stock-lag-market/)瑞致达（一家核电公用事业公司）上涨了 5.7%。标准普尔 500 指数成分股 Constellation Energy 上涨 5.1%。
+Along with Cameco on Wednesday, [S&P 500 leader](https://www.investors.com/news/sp500-vistra-stock-constellation-energy-stock-lag-market/) Vistra, a nuclear power utilities play, jumped 5.7%. Fellow S&P 500 component Constellation Energy advanced 5.1%.
 
 
-Meanwhile, **Uranium Energy** ([UEC](https://research.investors.com/quote.aspx?symbol=UEC)) leapt 8.4%. Uranium Energy engages in uranium exploration and development in the U.S. Southwest and Paraguay.  
-与此同时，**Uranium Energy** （[UEC](https://research.investors.com/quote.aspx?symbol=UEC)） 上涨 8.4%。Uranium Energy 在美国西南部和巴拉圭从事铀勘探和开发。
+Meanwhile, **Uranium Energy** ([UEC](https://research.investors.com/quote.aspx?symbol=UEC)) leapt 8.4%. Uranium Energy engages in uranium exploration and development in the U.S. Southwest and Paraguay.
 
 
-Oklo — the nuclear power startup backed by OpenAI head Sam Altman and with Peter Thiel as a major investor — surged 40.5% after clearing an early entry Tuesday. Fellow SMR-focused company **Nano Nuclear Energy** ([NNE](https://research.investors.com/quote.aspx?symbol=NNE)) leapt 37.8%. **NuScale Power** ([SMR](https://research.investors.com/quote.aspx?symbol=SMR)) soared 40%.  
-Oklo 是一家由 OpenAI 负责人 Sam Altman 支持、Peter Thiel 作为主要投资者的核电初创公司，在周二早盘平仓后飙升 40.5%。另一家专注于 SMR 的公司 **Nano Nuclear Energy** （[NNE）](https://research.investors.com/quote.aspx?symbol=NNE) 上涨了 37.8%。**NuScale Power** （[SMR）](https://research.investors.com/quote.aspx?symbol=SMR) 飙升 40%。
+Oklo — the nuclear power startup backed by OpenAI head Sam Altman and with Peter Thiel as a major investor — surged 40.5% after clearing an early entry Tuesday. Fellow SMR-focused company **Nano Nuclear Energy** ([NNE](https://research.investors.com/quote.aspx?symbol=NNE)) leapt 37.8%. **NuScale Power** ([SMR](https://research.investors.com/quote.aspx?symbol=SMR)) soared 40%.
 
 
-ARK Invest's Cathie Wood has been [building a position](https://www.investors.com/news/nuclear-sam-altman-startup-oklo-earnings-political-backing/) in Oklo worth more than $2 million since mid-July.  
-自 7 月中旬以来，ARK Invest 的 Cathie Wood 一直在 Oklo 建立价值超过 200 万美元的[头寸](https://www.investors.com/news/nuclear-sam-altman-startup-oklo-earnings-political-backing/)。
+ARK Invest's Cathie Wood has been [building a position](https://www.investors.com/news/nuclear-sam-altman-startup-oklo-earnings-political-backing/) in Oklo worth more than $2 million since mid-July.
 
 
-Cameco stock has a 66 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/) out of a best-possible 99. It has a 62 [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/) and a 42 [EPS Rating](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/).  
-Cameco 股票的综合[评级](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/)为 66 分（最高分 99 分）。它具有 62 的[相对强度评级](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/)和 42 [的 EPS 评级](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/)。
+Cameco stock has a 66 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/) out of a best-possible 99. It has a 62 [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/) and a 42 [EPS Rating](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/).
 
 
-*Please follow Kit Norton on X [@KitNorton](https://twitter.com/KitNorton) for more coverage.  
-请在 X [@KitNorton](https://twitter.com/KitNorton) 上关注 Kit Norton 以获得更多报道。*
+*Please follow Kit Norton on X [@KitNorton](https://twitter.com/KitNorton) for more coverage.*
 
 
-#### **YOU MAY ALSO LIKE: 您可能还喜欢：**
+#### **YOU MAY ALSO LIKE:**
 
 
-[Is Tesla Stock A Buy Or A Sell?  
-特斯拉股票是买入还是卖出？](https://www.investors.com/news/tesla-stock-a-buy-or-a-sell-in-2024/)
+[Is Tesla Stock A Buy Or A Sell?](https://www.investors.com/news/tesla-stock-a-buy-or-a-sell-in-2024/)
 
 
-[Get Full Access To IBD Stock Lists And Ratings  
-获得对 IBD 股票列表和评级的完全访问权限](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
+[Get Full Access To IBD Stock Lists And Ratings](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
-[Learning How To Pick Great Stocks? Read Investor's Corner  
-学习如何挑选好股票？阅读投资者专区](https://www.investors.com/category/how-to-invest/investors-corner/)
+[Learning How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/)
 
 
-[AI Is Fueling A 'Nuclear Renaissance.' Bill Gates And Jeff Bezos Are In The Mix.  
-AI 正在推动“核复兴”。比尔·盖茨 （Bill Gates） 和杰夫·贝佐斯 （Jeff Bezos） 也在其中。](https://www.investors.com/news/artificial-intelligence-ai-data-centers-demand-nuclear-energy/)
+[AI Is Fueling A 'Nuclear Renaissance.' Bill Gates And Jeff Bezos Are In The Mix.](https://www.investors.com/news/artificial-intelligence-ai-data-centers-demand-nuclear-energy/)
 
 
-[Futures: Nvidia Rises In Buy Area; Why Nuclear Stocks Are Radioactive Now  
-期货：英伟达在买入区域上涨;为什么核库存现在具有放射性](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-buy-area-taiwan-semi-earnings-nuclear-stocks/)
+[Futures: Nvidia Rises In Buy Area; Why Nuclear Stocks Are Radioactive Now](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-buy-area-taiwan-semi-earnings-nuclear-stocks/)
 
 
 
