--- a/_columns/The_Big_Picture/2024-10-16.md
+++ b/_columns/The_Big_Picture/2024-10-16.md
@@ -56,10 +56,10 @@ Small Caps Boost Stock Market
 -----------------------------
 
 
-The Russell 2000 made a 52-week closing high after the index climbed 1.6% Wednesday. It was the highest close since November 2o21, and the fourth consecutive gain.
+The Russell 2000 made a 52-week closing high after the index climbed 1.6% Wednesday. It was the highest close since November 2021, and the fourth consecutive gain.
 
 
-So far this month, the Russell is up 2.5%, outperforming the Nasdaq's 1% gain, the S&P 500's 1.4% climb, and the Dow's 1.7% increase.
+So far this month, the Russell is up 2.5%, outperforming the Nasdaq's 1% gain, the S&P 500's 1.4% climb, and the Dow's 1.8% increase.
 
 
 With the economic growth outlook improving and better visibility into interest-rate cuts, the Russell has rallied off the lows of its rising price channel, says Adam Turnquist, chief technical strategist for LPL Financial. Further, strength in banking stocks, which make up the index's largest sector by weighting, has offered support.
