--- a/_columns/The_Big_Picture/zh-cn/2024-10-14.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-14.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  These Major Indexes Mark New Highs; Will The Nasdaq Follow Suit?	这些主要指数创下新高;纳斯达克会效仿吗？
+  These Major Indexes Mark New Highs; Will The Nasdaq Follow Suit?
 date: 2024-10-14 18:04 -0700
 author: DAVID SAITO-CHUNG
 ---
@@ -10,128 +10,103 @@ author: DAVID SAITO-CHUNG
 
 
 
-Does the stock market in the final quarter of 2024 belong to the New York Stock Exchange?  
-2024 年最后一个季度的股市属于纽约证券交易所吗？
+Does the stock market in the final quarter of 2024 belong to the New York Stock Exchange?
 
 
-When you just look at Monday's action among the major indexes, it's hard to make this argument.  
-当你只看周一主要指数的表现时，很难提出这个论点。
+When you just look at Monday's action among the major indexes, it's hard to make this argument.
 
 
-The Nasdaq composite, up almost 0.9% on Monday, exceeded a 0.5% rise by its peer, the NYSE composite index. Megacap techs enjoyed a bullish session; Invesco QQQ Trust ([QQQ](https://research.investors.com/quote.aspx?symbol=QQQ)), tracking the Nasdaq's 100 largest nonfinancial companies, gained 0.8%.  
-纳斯达克综合指数周一上涨近 0.9%，高于其同行纽约证券交易所综合指数 0.5% 的涨幅。大型科技股享受了看涨的交易日;追踪纳斯达克 100 家最大非金融公司的 Invesco QQQ Trust （[QQQ）](https://research.investors.com/quote.aspx?symbol=QQQ) 上涨 0.8%。
+The Nasdaq composite, up almost 0.9% on Monday, exceeded a 0.5% rise by its peer, the NYSE composite index. Megacap techs enjoyed a bullish session; Invesco QQQ Trust ([QQQ](https://research.investors.com/quote.aspx?symbol=QQQ)), tracking the Nasdaq's 100 largest nonfinancial companies, gained 0.8%.
 
 
 
 
-Yet even though Monday's leadership mantle belonged to the Nasdaq, you might wonder whether the Nasdaq will follow the NYSE index in climbing to new high ground.  
-然而，尽管周一的领导权属于纳斯达克，但您可能想知道纳斯达克是否会跟随纽约证券交易所指数攀升至新高点。
+Yet even though Monday's leadership mantle belonged to the Nasdaq, you might wonder whether the Nasdaq will follow the NYSE index in climbing to new high ground.
 
 
-Stock Market Today 今日股市
------------------------
+Stock Market Today
+------------------
 
 
-At 18,502.69, the Nasdaq composite has run ahead 1.7% since the fourth quarter started. The index hovers just 1% below the all-time high of 18,671.  
-纳斯达克综合指数报 18,502.69 点，自第四季度开始以来已上涨 1.7%。该指数仅比历史高点 18,671 点低 1%。
+At 18,502.69, the Nasdaq composite has run ahead 1.7% since the fourth quarter started. The index hovers just 1% below the all-time high of 18,671.
 
 
-Yet in the meantime, take a look at the NYSE composite (type in ticker zero-NYC at [MarketSurge](https://marketsurge.investors.com/?src=A012BF)).  
-然而，与此同时，请看一下纽约证券交易所综合指数（在 [MarketSurge](https://marketsurge.investors.com/?src=A012BF) 输入股票代码 0-NYC）。
+Yet in the meantime, take a look at the NYSE composite (type in ticker zero-NYC at [MarketSurge](https://marketsurge.investors.com/?src=A012BF)).
 
 
-This index has notched either an all-time high or a closing high no fewer than 12 times since Sept. 17. Certainly, that's a big bundle of new highs over a period of less than a month. The Dow Jones Industrial Average, rising 0.5% to 43,065 on Monday, has also drummed up a bullish batch of new peaks over the same period.  
-自 9 月 17 日以来，该指数已创下不少于 12 次历史新高或收盘高点。当然，在不到一个月的时间里，这是一大堆新高。道琼斯工业平均指数周一上涨 0.5% 至 43,065 点，同期也创下了一批看涨的新高。
+This index has notched either an all-time high or a closing high no fewer than 12 times since Sept. 17. Certainly, that's a big bundle of new highs over a period of less than a month. The Dow Jones Industrial Average, rising 0.5% to 43,065 on Monday, has also drummed up a bullish batch of new peaks over the same period.
 
 
-On Monday, the large-cap S&P 500 also posted an all-time high of 5871, extending its year-to-date gain to 23%, with a 0.8% advance and its fourth gain in five sessions. The Russell 2000 rallied 0.6%, extending its gain from the Aug. 5 low of 1,993 to a solid 12.8%.  
-周一，大型标准普尔 500 指数也创下 5871 点的历史新高，将其年初至今的涨幅扩大至 23%，上涨 0.8%，这是五个交易日内的第四次上涨。罗素 2000 指数上涨 0.6%，从 8 月 5 日的低点 1,993 点扩大至 12.8% 的涨幅。
+On Monday, the large-cap S&P 500 also posted an all-time high of 5871, extending its year-to-date gain to 23%, with a 0.8% advance and its fourth gain in five sessions. The Russell 2000 rallied 0.6%, extending its gain from the Aug. 5 low of 1,993 to a solid 12.8%.
 
 
-Volume fell mildly on both the Nasdaq and NYSE vs. Friday. The U.S. government bond market was closed for Columbus Day.  
-与周五相比，纳斯达克和纽约证券交易所的成交量均小幅下降。美国政府债券市场因哥伦布日休市。
+Volume fell mildly on both the Nasdaq and NYSE vs. Friday. The U.S. government bond market was closed for Columbus Day.
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/10/MP101424-192x300.jpg)
 
 
-If you're a stock picker, you might just shrug your shoulders at Monday's action in the stock market. And that would be a valid reaction. If the earnings season produces pleasant surprises, it's reasonable to expect the Nasdaq composite to join its NYSE compatriot in new high territory.  
-如果你是一名选股者，你可能会对周一的股市走势耸耸肩。这将是一个有效的反应。如果财报季产生令人惊喜的惊喜，那么有理由预期纳斯达克综合指数将加入其纽约证券交易所的同胞，创下新的高位。
+If you're a stock picker, you might just shrug your shoulders at Monday's action in the stock market. And that would be a valid reaction. If the earnings season produces pleasant surprises, it's reasonable to expect the Nasdaq composite to join its NYSE compatriot in new high territory.
 
 
-But if you deploy a lot of capital in index and sector ETFs, then it may be useful to continue to track how the non-Nasdaq indexes fare on a day-to-day basis.  
-但是，如果您在指数和行业 ETF 中部署了大量资金，那么继续跟踪非纳斯达克指数的日常表现可能会有所帮助。
+But if you deploy a lot of capital in index and sector ETFs, then it may be useful to continue to track how the non-Nasdaq indexes fare on a day-to-day basis.
 
 
-Early data showed homebuilder, semiconductor equipment, building maintenance, electric utility, managed health care, generic drug, financial software, building products and chipmaking stocks pacing the day's upside. Each of these industry groups rallied 1.6% or more on a price-weighted basis.  
-早期数据显示，房屋建筑商、半导体设备、建筑维护、电力公用事业、管理式医疗保健、仿制药、金融软件、建筑产品和芯片制造股票在当天的上涨中占据主导地位。这些行业组别在价格加权基础上均上涨了 1.6% 或更多。
+Early data showed homebuilder, semiconductor equipment, building maintenance, electric utility, managed health care, generic drug, financial software, building products and chipmaking stocks pacing the day's upside. Each of these industry groups rallied 1.6% or more on a price-weighted basis.
 
 
-On the downside, discount and variety retail, drugstore chain, foreign bank, department store, specialty steel alloy and construction and mining machinery industries dropped 1.6% or more. Ship transport, oil and gas field services, toy and movie stocks also fell 1% or more as individual groups.  
-下行方面，折扣和品种零售、连锁药店、外资银行、百货公司、特种钢合金以及建筑和采矿机械行业下跌 1.6% 或更多。船舶运输、石油和天然气田服务、玩具和电影股作为单个组别也下跌了 1% 或更多。
+On the downside, discount and variety retail, drugstore chain, foreign bank, department store, specialty steel alloy and construction and mining machinery industries dropped 1.6% or more. Ship transport, oil and gas field services, toy and movie stocks also fell 1% or more as individual groups.
 
 
-Institutional Selling Tracks Dissipate机构抛售轨迹消散
-----------------------------------------------
+Institutional Selling Tracks Dissipate
+--------------------------------------
 
 
-Due to the Nasdaq's solid gains on Monday, two distribution days on the Market Pulse count got erased. Namely, the Sept. 17 stalling session and the Sept. 18 regular-type decline in higher volume got removed after the composite index rose 5% past the close in each of those sessions.  
-由于纳斯达克指数周一的稳健上涨，Market Pulse 计数的两个分发日被抹去。也就是说，在综合指数在每个交易日收盘后上涨 5% 后，9 月 17 日的停滞交易日和 9 月 18 日的常规高成交量下跌被消除。
+Due to the Nasdaq's solid gains on Monday, two distribution days on the Market Pulse count got erased. Namely, the Sept. 17 stalling session and the Sept. 18 regular-type decline in higher volume got removed after the composite index rose 5% past the close in each of those sessions.
 
 
-Hence, the [distribution-day count](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) now stands even at three each for both the Nasdaq and the S&P 500.  
-因此，纳斯达克和标准普尔 500 指数的[分销日计数](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)现在甚至分别为 3 个。
+Hence, the [distribution-day count](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) now stands even at three each for both the Nasdaq and the S&P 500.
 
 
-The Market Pulse also displays a large number of companies based on the New York Stock Exchange. Put another way, leadership in the stock market appears to be getting more evenly distributed. This is an overall positive for bull runs. You want to see the breadth of the stock market expand, not compress.  
-Market Pulse 还显示了大量基于 New York Stock Exchange 的公司。换句话说，股市的领导地位似乎分布得更加均匀。这对牛市总体上是积极的。您希望看到股市的广度扩大，而不是压缩。
+The Market Pulse also displays a large number of companies based on the New York Stock Exchange. Put another way, leadership in the stock market appears to be getting more evenly distributed. This is an overall positive for bull runs. You want to see the breadth of the stock market expand, not compress.
 
 
-A New IPO And Stock Market leader新的 IPO 和股票市场领导者
-------------------------------------------------
+A New IPO And Stock Market leader
+---------------------------------
 
 
 
-**LandBridge** ([LB](https://research.investors.com/quote.aspx?symbol=LB)) has been one of the hottest new issues this year. Admittedly, there have not been many excellent IPOs trading this year.  
-**LandBridge** （[LB）](https://research.investors.com/quote.aspx?symbol=LB) 是今年最热门的新发行之一。诚然，今年没有多少优秀的 IPO 交易。
+**LandBridge** ([LB](https://research.investors.com/quote.aspx?symbol=LB)) has been one of the hottest new issues this year. Admittedly, there have not been many excellent IPOs trading this year.
 
 
-The land owner, focused on developing energy-producing properties, went public at $17 a share June 28. Monday's action saw the NYSE-listed company likely succumb to profit taking after the stock tripled in price vs. its initial public offering price. While shares rallied 5.2% to 51.55 on Monday, the stock finished well off the day's high of 56.84.  
-这家专注于开发能源生产物业的土地所有者于 6 月 28 日以每股 17 美元的价格上市。周一的行动使这家纽约证券交易所上市公司在股价较首次公开募股价格上涨了两倍后可能屈服于获利回吐。虽然股价周一上涨 5.2% 至 51.55，但该股收盘远低于当天的高点 56.84。
+The land owner, focused on developing energy-producing properties, went public at $17 a share June 28. Monday's action saw the NYSE-listed company likely succumb to profit taking after the stock tripled in price vs. its initial public offering price. While shares rallied 5.2% to 51.55 on Monday, the stock finished well off the day's high of 56.84.
 
 
-The stock finished Monday a heady 34% above its rising [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/). Expect the 200-day line to start forming in mid-April.  
-该股周一收盘时，比其上涨[的 50 天移动平均线高出 34](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/)%。预计 200 日线将于 4 月中旬开始形成。
+The stock finished Monday a heady 34% above its rising [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/). Expect the 200-day line to start forming in mid-April.
 
 
-On Monday, crude oil futures on the Nymex slid 2.3% to $73.83 a barrel.  
-周一，纽约商品交易所原油期货下跌 2.3% 至每桶 73.83 美元。
+On Monday, crude oil futures on the Nymex slid 2.3% to $73.83 a barrel.
 
 
-[View General Market Indicator charts page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_101424.pdf)
+[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_101424.pdf)
 
 
-*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)  
-*请在 X/Twitter 上关注 Chung：*[*@saitochung*](https://twitter.com/SaitoChung) *和* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
+*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
 
 
-**YOU MIGHT ALSO LIKE: 您可能还喜欢：**
+**YOU MIGHT ALSO LIKE:**
 
 
-[The Latest IBD Podcast 最新的 IBD 播客](https://get.investors.com/podcast/?src=A00511A)
+[The Latest IBD Podcast](https://get.investors.com/podcast/?src=A00511A)
 
 
-[Best Growth Stocks To Buy And Watch Now  
-最值得购买和立即观看的成长型股票](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Best Growth Stocks To Buy And Watch Now](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Want To Learn How To Pick Great Stocks? Read Investor's Corner  
-想学习如何挑选优质股票吗？阅读投资者专区](https://www.investors.com/category/how-to-invest/investors-corner/)
+[Want To Learn How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/)
 
 
-[The Latest In IBD Videos  
-最新的 IBD 视频](https://www.investors.com/ibd-videos)
+[The Latest In IBD Videos](https://www.investors.com/ibd-videos)
 
 
 
